# unn-python-2022

homeworks/Ivan_Mukhin/hw6/: pyproject.toml
homeworks/Ivan_Mukhin/hw6/hw6/: my_awesome_script.py
